--- a/src/app/home/home.fxml
+++ b/src/app/home/home.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
@@ -9,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.home.HomeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.home.HomeController">
    <children>
       <SplitPane dividerPositions="0.2669172932330827" layoutX="-1.0" layoutY="1.0" prefHeight="600.0" prefWidth="800.0">
         <items>
@@ -42,13 +46,17 @@
                      </font>
                   </Label>
                   <Label layoutX="95.0" layoutY="165.0" prefHeight="23.0" prefWidth="92.0" text="signed in as:" />
-                  <TableView fx:id="accountTable" layoutX="95.0" layoutY="234.0" prefHeight="200.0" prefWidth="358.0">
+                  <TableView fx:id="accountTable" layoutX="47.0" layoutY="234.0" prefHeight="264.0" prefWidth="498.0">
                     <columns>
-                      <TableColumn fx:id="accountNameC" prefWidth="96.0" text="Name" />
-                      <TableColumn fx:id="accountNumberC" prefWidth="156.0" text="AccountNumber" />
-                        <TableColumn fx:id="amountC" prefWidth="105.0" text="Balance" />
+                      <TableColumn fx:id="accountNameC" prefWidth="135.0" text="Name" />
+                        <TableColumn fx:id="accounttypeC" prefWidth="118.0" text="Type" />
+                      <TableColumn fx:id="accountNumberC" prefWidth="141.0" text="AccountNumber" />
+                        <TableColumn fx:id="amountC" prefWidth="103.0" text="Balance" />
                     </columns>
                   </TableView>
+                  <Button fx:id="createNewAccountbtn" layoutX="47.0" layoutY="519.0" mnemonicParsing="false" onAction="#goToCreateNewAccount" text="Create new account" />
+                  <Button fx:id="deleteAccountbtn" layoutX="231.0" layoutY="519.0" mnemonicParsing="false" text="Delete account" />
+                  <Button fx:id="changeAccountNamebtn" layoutX="376.0" layoutY="519.0" mnemonicParsing="false" text="Change account name" />
                </children>
             </AnchorPane>
         </items>
