--- a/src/app/transactionsHistory/transactionsHistory.fxml
+++ b/src/app/transactionsHistory/transactionsHistory.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -10,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.transactionsHistory.TransactionsHistory">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.transactionsHistory.TransactionsHistory">
    <children>
       <SplitPane dividerPositions="0.26119402985074625" layoutX="-2.0" prefHeight="600.0" prefWidth="806.0">
         <items>
@@ -28,7 +32,6 @@
                         <Button fx:id="transferbtn" mnemonicParsing="false" onAction="#goToTransfer" prefHeight="31.0" prefWidth="169.0" text="Transfer" />
                      </children>
                   </VBox>
-                  <Button fx:id="cardpaymentA" layoutX="30.0" layoutY="451.0" mnemonicParsing="false" onAction="#cardPayment" text="CardPayment 200kr" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
