--- a/src/app/login/login.fxml
+++ b/src/app/login/login.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -14,18 +9,18 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.login.LoginController">
+<AnchorPane prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.login.LoginController">
    <children>
       <VBox layoutX="94.0" layoutY="173.0" prefHeight="254.0" prefWidth="213.0">
          <children>
             <Label prefHeight="35.0" prefWidth="213.0" text="Username:" />
-            <TextField fx:id="username" promptText="username" text="lars" />
+            <TextField fx:id="username" promptText="username" />
             <Label prefHeight="34.0" prefWidth="213.0" text="Password:">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
             </Label>
-            <PasswordField fx:id="password" promptText="password" text="abc123" />
+            <PasswordField fx:id="password" promptText="password" />
             <Label fx:id="errorlable" prefHeight="21.0" prefWidth="219.0" text=" Username or password wrong!" textFill="#da0b0b">
                <VBox.margin>
                   <Insets top="10.0" />
